crates/plotnik-tests/tests/02-parser/recovery_validation/named_discard_camel_case.txt
Q = (a) @_fooBar
------------------ DIAGNOSTICS -------------------
error: capture names must be snake_case
 --> query.ptk:1:9
  |
1 | Q = (a) @_fooBar
  |         ^^^^^^^^
  |
help: use `@_foo_bar`
  |
1 - Q = (a) @_fooBar
1 + Q = (a) @_foo_bar
  |
help: capture names become result field names
